initial html set up. initiating div classes for css

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <title>JS PingPong</title>
 </head>
 <body>
-
-<canvas id="pong" width="600" height="400"></canvas>
-<script src="pong.js"> </script>
+<div class="score">
+  <div id="player-score">0</div>
+  <div id="computer-score">0</div>
+</div>
+<div class="ball" id="ball"></div>
+<div class="paddle left" id="player-paddle"></div>
+<div class="paddle right" id="computer-paddle"></div>
 </body>
 </html>
