re working entire project using html canvas instead. set up html file

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
   <title>JS PingPong</title>
 </head>
 <body>
-<div class="score">
-  <div id="player-score">0</div>
-  <div id="computer-score">0</div>
+<div id="game-container">
+  <canvas id="game-board" width="500" height="500"></canvas>
+  <div id="score-text">0 : 0</div>
+  <button id="reset-btn">Reset</button>
 </div>
-<div class="ball" id="ball"></div>
-<div class="paddle left" id="player-paddle"></div>
-<div class="paddle right" id="computer-paddle"></div>
+<script src="index.js"></script>
 </body>
 </html>
