--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <script src="script.js" type="module"></script>
   <title>JS PingPong</title>
 </head>
 <body>
 <div id="game-container">
-  <canvas id="game-board" width="500" height="500"></canvas>
+  <canvas id="game-board" width="500px" height="500px"></canvas>
   <div id="score-text">0 : 0</div>
   <button id="reset-btn">Reset</button>
 </div>
