paddle1 on gameboard

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <div id="score-text">0 : 0</div>
   <button id="reset-btn">Reset</button>
 </div>
-<script src="index.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
